# agents.tracie

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
config/: .env.example  settings.yaml
docs/: USAGE.md
src/agent/: __init__.py  core.py  settings.py
src/agent/chains/: __init__.py
src/agent/memory/: __init__.py
src/agent/prompts/: __init__.py
src/scripts/: run_agent.py
src/tests/: __init__.py  test_core.py
